--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Banda de Música</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Unión Musical Santa Cecilia de Paterna </h1>
+    </header>
+    <main>
+        <h3>Próximas actuaciones</h3>
+        <div id="evento1"></div>
+        <div id="evento2"></div>
+        <div id="evento3"></div>
+    </main>
+    <footer>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-instagram"></a>
+    </footer>
+    <script>
+        window.intergramId = "692341513"/*aqui se pone el numero de matricula que nos da telegram en 
+        @Intergram*/
+    </script>
+    <script id="intergram" type="text/javascript" src="https://www.intergram.xyz/js/widget.js"></script>
+
+
 </body>
 </html>
