modificacion del grupo musica

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
 <body>
     <header>
-        <h1>Unión Musical Santa Cecilia de Paterna </h1>
+        <h1>Trébede Music </h1>      
+        <h2>El number one de la rumba flamenca</h2>      
     </header>
     <main>
         <h3>Próximas actuaciones</h3>
-        <div id="evento1"></div>
-        <div id="evento2"></div>
-        <div id="evento3"></div>
+        <div id="evento1"></div> <!--poner imagen de cartel-->
+        <div id="evento2"></div> <!--poner imagen de cartel-->
+        <div id="evento3"></div> <!--poner imagen de cartel-->
     </main>
     <footer>
         <a href="#" class="fa fa-facebook"></a>
@@ -27,11 +28,13 @@
         <a href="#" class="fa fa-instagram"></a>
     </footer>
     <script>
-        window.intergramId = "692341513"/*aqui se pone el numero de matricula que nos da telegram en 
-        @Intergram*/
+        window.intergramId = "692341513"
+        /*aqui se pone el numero de matricula que nos da telegram en 
+                @Intergram*/
     </script>
     <script id="intergram" type="text/javascript" src="https://www.intergram.xyz/js/widget.js"></script>
 
 
 </body>
+
 </html>
